# Depix

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_zh-cn.md  depix.py  depix_static.py  genpixed.py  password recovery  requirements.txt  setup.cfg  tool_gen_pixelated.py  tool_show_boxes.py
depixlib/: LoadedImage.py  Rectangle.py  __init__.py  depix.py  functions.py  genpixed.py  helpers.py  new.py
images/searchimages/: debruinseq.txt
