[metadata]
name = depix
version = attr: depixlib.__version__
description = Recovers passwords from pixelized screenshots
long_description = file: README.md
long_description_content_type = text/markdown
license = CC BY 4.0
author = beurtschipper
url = https://github.com/beurtschipper/Depix
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Security
    Topic :: Utilities
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Pillow
packages_data =
    depixlib = py.typed
python_requires = >= 3.5

[options.entry_points]
console_scripts =
    depix = depixlib.depix:main
    genpixed = depixlib.genpixed:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-setuptools

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

